--- a/foll/templates/foll/head_css.html
+++ b/foll/templates/foll/head_css.html
@@ -1,6 +1,4 @@
-{% load staticfiles %}
-
-
+{% load static %}
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -8,13 +6,25 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-	<link rel = "stylesheet"  type="text/css" href = "static/css/custom.css" >
+<!--{% static "my_app/myexample.jpg" %}-->
+    <link rel = "stylesheet"  type="text/css" href = "{% static "css/custom.css" %}" >
 
-	<link rel = "stylesheet"  type="text/css" href = "static/css/sidebar.css" >
+	<link rel = "stylesheet"  type="text/css" href = "{% static "css/sidebar.css" %}">
 
-	<link rel = "stylesheet"  type="text/css" href = "static/css/navbar.css" >
+	<link rel = "stylesheet"  type="text/css" href = "{% static "css/navbar.css" %}" >
 
-	<link rel = "stylesheet"  type="text/css" href = "static/css/signup_page.css" >
+	<link rel = "stylesheet"  type="text/css" href = "{% static "css/signup_page.css" %}" >
+
+
+	<!--<link rel = "stylesheet"  type="text/css" href = "/home/winstonww/partyfood/static/css/custom.css" >-->
+
+	<!--<link rel = "stylesheet"  type="text/css" href = "/home/winstonww/partyfood/static/css/sidebar.css" >-->
+
+	<!--<link rel = "stylesheet"  type="text/css" href = "/home/winstonww/partyfood/static/css/navbar.css" >-->
+
+	<!--<link rel = "stylesheet"  type="text/css" href = "/home/winstonww/partyfood/static/css/signup_page.css" >-->
+
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -22,10 +32,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Overlock" type="text/css" rel="stylesheet">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-	<link rel="stylesheet" href="static/css/fontawesome-stars.css">
-	<script src="static/js/jquery.barrating.min.js"></script>
 
-	
+	<!--<link rel="stylesheet" href="static/css/fontawesome-stars.css">-->
 
+	<!--<script src="home/winstonww/partyfood/static/js/jquery.barrating.min.js"></script>-->
 
-	<script src="static/js/jquery.geocomplete.min.js"></script>
+	<!--<script src="home/winstonww/partyfood/static/js/jquery.geocomplete.min.js"></script>-->
+
+	<link rel="stylesheet" href="{% static "css/fontawesome-stars.css" %}">
+
+	<script src="{% static "js/jquery.barrating.min.js" %}"></script>
+
+	<script src="{% static "js//jquery.geocomplete.min.js" %}"></script>
