--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -5,7 +5,7 @@
 {% block hihi %}
 <div class = "signup_wrapper">
 	<div class = "row">
-	<h1> Foll </h1>
+	<h1> Foll hihi </h1>
 	<h3>  Choose the best food to bring to a potluck while keeping the cost within budget </h3>
 	</div>
 	<div class = "row">
