--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -39,11 +39,13 @@
 	<div class = "row">
 		<div class = "col-xl-push-3 col-lg-push-3 col-md-push-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 col-xs-12" style = 'margin : 0;'>
 			<div class = "login_form_container">
-			<h5 style = "float:left; display:inline-block; margin-right: 3px; "> Already a user? Login here: </h5>
+			<h5 style = "float:left; display:inline-block; margin-right: 3px; background-color: #d3d3d3; "> Already a user? Login here: </h5>
 		
 			{% crispy user_login_form user_login_form.helper %}
-
+			{% if no_user_flag %}
+			<p style = "color: red;">Username/password does not exist. Try again." </p>
 			</div>
+			{% endif %}
 		</div>
 	</div>
 
