--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -43,7 +43,7 @@
 		
 			{% crispy user_login_form user_login_form.helper %}
 			{% if no_user_flag %}
-			<p style = "color: red;">Username/password does not exist. Try again." </p>
+			<p>Username/password does not exist. Try again." </p>
 			</div>
 			{% endif %}
 		</div>
