--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -44,7 +44,7 @@
 			{% crispy user_login_form user_login_form.helper %}
 			</div>
 			{% if no_user_flag == True %}
-				<p style = "colorL: red;">Username/password does not exist. Try again." </p>
+				<p style = "color: red;  text-align: center;">Username/password does not exist. Try again." </p>
 			{% endif %}
 		</div>
 	</div>
