--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -61,14 +61,12 @@
 									</div> 
 
 									 <div class="panel-footer">
-									 	<div class = "row">
-									 		<div class = "col-xs-2 col-xs-push-9">
-									 			<button type="button" class="btn btn-sm" data-toggle="modal" data-target="#partyform_modal">
-									 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-									 			Add Party
-									 			</button>
-							 					{% include 'foll/partyform.html' %}
-									 		</div>
+									 	<div class =  "btn-group pull-right">
+								 			<button type="button" class="btn btn-sm" data-toggle="modal" data-target="#partyform_modal">
+								 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+								 			Add Party
+								 			</button>
+						 					{% include 'foll/partyform.html' %}	
 									 	</div>
 									 </div>
 
