--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -60,7 +60,7 @@
 										</div>
 									</div> 
 
-									 <div class="panel-footer">
+									 <div class="panel-footer clearfix">
 									 	<div class =  "btn-group pull-right">
 								 			<button type="button" class="btn btn-sm" data-toggle="modal" data-target="#partyform_modal">
 								 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
