--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -10,6 +10,9 @@
 	</div>
 	<div class = "row">
 		<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+			{% if account_taken_flag == True %}
+				<p style = "color: red;  text-align: center; ">Username/email address has been taken. Try again. </p>
+			{% endif %}
 			<div class = "signup_form_container">
 			{% crispy signup_form signup_form.helper %}
 			</div>
