--- a/foll/templates/foll/partyform.html
+++ b/foll/templates/foll/partyform.html
@@ -22,7 +22,34 @@
           $(document).ready(function(){
             $( "#partyform" ).submit(function( event ) {
               alert( "Handler for .submit() called." );
-              event.preventDefault();
+              var party_name = $("#party_name").val();
+              var party_location = $("#party_location").val();
+              var party_date_time = $("#party_date_time").val();
+              var div_id_max_size  = $("#div_id_max_size").val();
+              var div_id_max_budget = $('#div_id_max_budget').val();
+              var error_message = '';
+                if (party_name == ''){
+                  error_message +=  "Party name is a required field.\n" ;
+                  event.preventDefault();
+                }
+                else if (party_location == ''){
+                  error_message += "Party venue is a required field.\n" ;
+                  event.preventDefault();
+                }
+                else if (party_date_time == ''){
+                  error_message += "Party date/time is a required field.\n" ;
+                  event.preventDefault();
+                }
+                else if (div_id_max_size == ''){
+                  error_message +=  "Party size is a required field.\n" ;
+                  event.preventDefault();
+                }
+                else if (div_id_max_budget == ''){
+                  error_message += "Party budget is a required field.\n" ;
+                  event.preventDefault();
+                }
+
+              });
             });
 
             //  $(".controls").on("click", "#submit-id-submit_party", function() {
