--- a/foll/templates/foll/partyform.html
+++ b/foll/templates/foll/partyform.html
@@ -28,23 +28,23 @@
               var div_id_max_budget = $('#div_id_max_budget').val();
               var error_message = '';
                 if (party_name == ''){
-                  error_message +=  "Party name is a required field.\n" ;
+                  error_message +=  "• Party name is a required field.\n" ;
                   event.preventDefault();
                 }
                 if (party_location == ''){
-                  error_message += "Party venue is a required field.\n" ;
+                  error_message += "• Party venue is a required field.\n" ;
                   event.preventDefault();
                 }
                 if (party_date_time == ''){
-                  error_message += "Party date/time is a required field.\n" ;
+                  error_message += "• Party date/time is a required field.\n" ;
                   event.preventDefault();
                 }
                 if (div_id_max_size == ''){
-                  error_message +=  "Party size is a required field.\n" ;
+                  error_message +=  "• Party size is a required field.\n" ;
                   event.preventDefault();
                 }
                 if (div_id_max_budget == ''){
-                  error_message += "Party budget is a required field.\n" ;
+                  error_message += "• Party budget is a required field.\n" ;
                   event.preventDefault();
                 }
                 if (error_message != ''){
