--- a/foll/templates/foll/partyform.html
+++ b/foll/templates/foll/partyform.html
@@ -26,8 +26,8 @@
               var party_name = $("#party_name").val();
               var party_location = $("#party_location").val();
               var party_date_time = $("#party_date_time").val();
-              var div_id_max_size  = $("#div_id_max_size").val();
-              var div_id_max_budget = $('#div_id_max_budget').val();
+              var div_id_max_size  = $("#party_max_size").val();
+              var div_id_max_budget = $('#party_max_budget').val();
               var error_message = '';
                 if (party_name == ''){
                   error_message +=  "•  Party name <br>" ;
