--- a/foll/templates/foll/partyform.html
+++ b/foll/templates/foll/partyform.html
@@ -25,7 +25,7 @@
             $( "#partyform" ).submit(function( event ){
               var party_name = $("#party_name").val();
               var party_location = $("#party_location").val();
-              var party_date_time = $("#party_date_time").val();
+              var party_date_time = $("#party_date_time[name = date_time]").val();
               var div_id_max_size  = $("#party_max_size").val();
               var div_id_max_budget = $('#party_max_budget').val();
               var error_message = '';
