--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -92,7 +92,7 @@
 		<div class = "col-lg-7">
 			<div class="panel panel-default panel-table" id = "all_food_panel">
 		 		<div class="panel-heading clearfix">
-		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">List of all Food</h3>
+		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">You proposed:</h3>
 
 		  			<div class="btn-group pull-right add-and-edit-rating-button-group">
 			  			<button type="button" class="btn btn-sm" data-toggle="modal" data-target="#foodform_modal" >
@@ -102,23 +102,11 @@
 			 			
 			 			{% include 'foll/foodform.html' %}
 
-			  			<button type="button" class="btn btn-sm" style='margin-left:0.25em;' id = "edit-rating" >
-			 			<span class="glyphicon glyphicon-asterisk" aria-hidden="true" ></span>
-			 			 Edit Rating
-			 			</button>
 		 			</div>
 
 		 			<div class="btn-group pull-right ok-cancel-group hidden">
 
-		 				<button type="button" class="btn btn-sm" id = "confirm-rating" >
-			 			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-			 			 OK
-			 			</button>
-			
-			  			<button type="button" class="btn btn-sm" style='margin-left:0.25em;' id = "cancel-rating" >
-			 			<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
-			 			 Cancel
-			 			</button>
+		 				
 
 		 			</div>
 
@@ -223,6 +211,97 @@
 			</div>
 		</div>
 	</div>
+
+	<div class = "row">
+				<div class = "col-lg-12">
+			<div class="panel panel-default panel-table" id = "all_food_panel">
+		 		<div class="panel-heading clearfix">
+		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">List of all Food</h3>
+
+		  			<div class="btn-group pull-right add-and-edit-rating-button-group">
+
+			  			<button type="button" class="btn btn-sm" style='margin-left:0.25em;' id = "edit-rating" >
+			 			<span class="glyphicon glyphicon-asterisk" aria-hidden="true" ></span>
+			 			 Edit Rating
+			 			</button>
+		 			</div>
+
+		 			<div class="btn-group pull-right ok-cancel-group hidden">
+
+		 				<button type="button" class="btn btn-sm" id = "confirm-rating" >
+			 			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			 			 OK
+			 			</button>
+			
+			  			<button type="button" class="btn btn-sm" style='margin-left:0.25em;' id = "cancel-rating" >
+			 			<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
+			 			 Cancel
+			 			</button>
+
+		 			</div>
+
+		 			<script>
+		 			
+		 			$(document).ready(function() {
+
+		
+			 			$(".add-and-edit-rating-button-group").on("click", "#edit-rating", function() {
+
+
+							$('.add-and-edit-rating-button-group')
+		       		 		.addClass('hidden')
+
+		       		 		$('.ok-cancel-group')
+		       		 		.removeClass('hidden')
+
+		       		 		 $('.example').barrating('readonly',false);
+
+
+						});
+
+			 			$(".ok-cancel-group").on("click", "#cancel-rating", function() {
+							$('.add-and-edit-rating-button-group')
+		       		 		.removeClass('hidden');
+
+		       		 		$('.ok-cancel-group')
+		       		 		.addClass('hidden');
+
+		       		 		 $('.example').barrating('readonly',true);
+
+						});
+
+
+
+			 		});
+
+		 			</script>
+	 			</div>
+
+		  		<div class="panel-body">
+		  			<div class="container col-md-12 col-lg-12 col-sm-12 ">
+			 			<table class="table table-hover">
+			   				<thead>
+			     				<tr>
+			        				<th>Food</th>
+			        				<th>Price</th>
+			        				<th>Average Rating </th>
+			        				<th>Rating</th>
+
+			     				</tr>
+			   				</thead>
+
+
+			  				<tbody>
+			  					{% include 'foll/food_rating.html' %}
+			    			</tbody>
+			  			</table>
+			  		</div>
+				</div> 
+			</div>	
+		</div>
+	</div>
+
+
 	</div>
 </div>
 
