--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -192,7 +192,7 @@
 				<div class = "col-lg-11">
 			<div class="panel panel-default panel-table" id = "all_food_panel">
 		 		<div class="panel-heading clearfix">
-		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">List of all Food</h3>
+		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">All Items</h3>
 
 		  			<div class="btn-group pull-right add-and-edit-rating-button-group">
 
