--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -20,9 +20,9 @@ $("#menu-toggle").click( function (e){
 <body>
 	<!-- basic template for a navbar, anchor tags are important -->
 	<nav class = "navbar navbar-orange navbar-fixed-top"> 
-				<!-- <button id="menu-toggle">
+				<button id="menu-toggle">
 					<i class="navbar-icon fa fa-bars icon"></i>
-				</button> -->
+				</button>
 		<div class = "container-fluid">
 			<!-- logo -->
 
