--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -19,7 +19,7 @@ $("#menu-toggle").click( function (e){
 
 <body>
 	<!-- basic template for a navbar, anchor tags are important -->
-	<nav class = "navbar navbar-orange navbar-fixed-top"> 
+	<nav class = "navbar navbar-orange navbar-fixed-top clearfix"> 
 				<button id="menu-toggle">
 					<i class="navbar-icon fa fa-bars icon"></i>
 				</button>
