--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -24,12 +24,12 @@ $("#menu-toggle").click( function (e){
 		<div class = "container-fluid">
 			<!-- logo -->
 
-			<div class = "navbar-header">
+			<div class = "navbar-header" style = "padding-top: 1%; width : 10%;">
 				<button id="menu-toggle">
 					<i class="navbar-icon fa fa-bars icon"></i>
 				</button>
 			</div>
-			
+
 			<a href = '#' class = "navbar-brand"> FOLL </a>
 			<!-- Menu Item -->
 			<div class = "collapse navbar-collapse" id = "mainNavBar">
