--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -23,14 +23,16 @@ $("#menu-toggle").click( function (e){
 
 		<div class = "container-fluid">
 			<!-- logo -->
-
-			<div class = "navbar-header" style = "padding-top: 1%; width : 4%;">
+			<div class = "navbar-header clearfix pull-right">
+			<!-- <div class = "navbar-header " style = "padding-top: 1%; width : 4%;"> -->
 				<button id="menu-toggle">
 					<i class="navbar-icon fa fa-bars icon"></i>
 				</button>
+
+				<a href = '#' class = "navbar-brand"> FOLL </a>
 			</div>
 
-			<a href = '#' class = "navbar-brand"> FOLL </a>
+			
 			<!-- Menu Item -->
 			<div class = "collapse navbar-collapse" id = "mainNavBar">
 				<ul class = "nav navbar-nav">
