--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -23,7 +23,7 @@ $("#menu-toggle").click( function (e){
 
 		<div class = "container-fluid">
 			<!-- logo -->
-			<div class = "navbar-header clearfix pull-right">
+			<div class = "navbar-header clearfix pull-lefts">
 			<!-- <div class = "navbar-header " style = "padding-top: 1%; width : 4%;"> -->
 				<button id="menu-toggle">
 					<i class="navbar-icon fa fa-bars icon"></i>
