--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -23,11 +23,13 @@ $("#menu-toggle").click( function (e){
 
 		<div class = "container-fluid">
 			<!-- logo -->
-			<div class = "navbar-header clearfix pull-lefts">
+			<div class = "navbar-header clearfix pull-left">
 			<!-- <div class = "navbar-header " style = "padding-top: 1%; width : 4%;"> -->
-				<button id="menu-toggle">
-					<i class="navbar-icon fa fa-bars icon"></i>
-				</button>
+				<div style = "padding-top: 1%; width : 4%;">
+					<button id="menu-toggle">
+						<i class="navbar-icon fa fa-bars icon"></i>
+					</button>
+				</div>
 
 				<a href = '#' class = "navbar-brand"> FOLL </a>
 			</div>
