--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -25,7 +25,7 @@ $("#menu-toggle").click( function (e){
 			<!-- logo -->
 			<div class = "navbar-header clearfix pull-left">
 			<!-- <div class = "navbar-header " style = "padding-top: 1%; width : 4%;"> -->
-				<div style = "padding-top: 1%; width : 4%;">
+				<div class = "clearfix" style = "padding-top: 1%; width : 4%;">
 					<button id="menu-toggle">
 						<i class="navbar-icon fa fa-bars icon"></i>
 					</button>
