--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -23,18 +23,19 @@ $("#menu-toggle").click( function (e){
 
 		<div class = "container-fluid">
 			<!-- logo -->
-			<div class = "navbar-header clearfix pull-left">
-			<!-- <div class = "navbar-header " style = "padding-top: 1%; width : 4%;"> -->
+			
+			<div class = "navbar-header " style = "padding-top: 1%; width : 4%;">
 				
-					<button id="menu-toggle" style = "padding-top: 1%; width : 4%;">
+					<button id="menu-toggle"">
 						<i class="navbar-icon fa fa-bars icon"></i>
 					</button>
-					<a href = '#' class = "navbar-brand"> FOLL </a>
+					
 			</div>
 
 			
 			<!-- Menu Item -->
 			<div class = "collapse navbar-collapse" id = "mainNavBar">
+			<a href = '#' class = "navbar-brand"> FOLL </a>
 				<ul class = "nav navbar-nav">
 					<!-- active class gives the hover hightlight -->
 					<!-- Menu Not gonna work without the anchor tag -->
