--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -178,6 +178,12 @@
 			       					<td> {{food_info.name}} </td>
 			       					<td>{{food_info.price}}</td>
 			     					<td>{{food_info.avg_rating}}</td>
+			     					<td>
+			     					<button type="button" class="btn btn-sm" id = "food_info.id_remove_button" >
+						 			<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+						 			 Remove
+						 			</button>
+			     					</td>
 			     				</tr>
 								{% endfor %}
 			    			</tbody>
@@ -261,7 +267,7 @@
 			        				<th>Food</th>
 			        				<th>Price</th>
 			        				<th>Average Rating </th>
-			        				<th>Rating</th>
+			        				<th>Your Rating</th>
 
 			     				</tr>
 			   				</thead>
