--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -137,7 +137,7 @@
 										<td>{{food_info.price}}</td>
 										<td> {{food_info.avg_rating}}</td>
 										<td>
-					     					<button type="button" class="btn btn-sm pull-right" href = "{% url 'delete_food' food_info.id %}"" id = "food_info.id_remove_button" >
+					     					<button type="button" class="btn btn-sm pull-right" href = "{% url 'delete_food' food_info.id %}" id = "food_info.id_remove_button" >
 								 			<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
 								 			 Remove
 								 			</button>
