--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -137,9 +137,11 @@
 										<td>{{food_info.price}}</td>
 										<td> {{food_info.avg_rating}}</td>
 										<td>
-					     					<button type="button" class="btn btn-sm pull-right" href = "{% url 'delete_food' food_info.id %}" id = "food_info.id_remove_button" >
-								 			<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-								 			 Remove
+					     					<button type="button" class="btn btn-sm pull-right" id = "food_info.id_remove_button" > 
+								 				<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+								 				<a href = "{% url 'delete_food' food_info.id %}">
+								 					 Remove
+								 				</a>
 								 			</button>
 					     				</td>
 									</tr>
