--- a/foll/templates/foll/party_details.html
+++ b/foll/templates/foll/party_details.html
@@ -89,7 +89,7 @@
 	</div>
 
 	<div class = "row">
-		<div class = "col-lg-7">
+		<div class = "col-lg-6">
 			<div class="panel panel-default panel-table" id = "your_food_panel">
 		 		<div class="panel-heading clearfix">
 		  			<h3 class="panel-title pull-left" style ="padding-top:5px;">Your suggestions</h3>
@@ -137,12 +137,11 @@
 										<td>{{food_info.price}}</td>
 										<td> {{food_info.avg_rating}}</td>
 										<td>
-					     					<button type="button" class="btn btn-sm pull-right" id = "food_info.id_remove_button" > 
-								 				<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-								 				<a href = "{% url 'delete_food' food_info.id %}">
-								 					 Remove
-								 				</a>
-								 			</button>
+					     					
+							 				<a href = "{% url 'delete_food' food_info.id %}" class="btn btn-sm pull-right" id = "food_info.id_remove_button">
+							 					<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+							 					 Remove
+							 				</a>
 					     				</td>
 									</tr>
 								{% endfor %}
@@ -154,7 +153,7 @@
 			</div>	
 		</div>
 
-		<div class = "col-lg-4">
+		<div class = "col-lg-5">
 			<div class="panel panel-default" style = "height: 400px;">
 		 		<div class="panel-heading">
 	        	 	<div class= "row">
