--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -3,6 +3,9 @@
 
 
 {% block hihi %}
+
+
+
 <div class = "signup_wrapper">
 	<div class = "row">
 	<h1> Foll hihi </h1>
@@ -49,7 +52,22 @@
 		
 			{% crispy user_login_form user_login_form.helper %}
 			</div>
-			
+			OR
+			<div>
+				<link href="{{ STATIC_URL }}django_facebook/css/facebook.css" type="text/css" rel="stylesheet" media="all" />
+				{% include 'django_facebook/_facebook_js.html' %}
+
+				<form action="{% url 'facebook_connect' %}?facebook_login=1" method="post">
+				    <input type="hidden" value="{{ request.path }}" name="next" />
+				    <input type="hidden" value="{{ request.path }}" name="register_next" />
+				    <input type="hidden" value="{{ request.path }}" name="error_next" />
+				    {% csrf_token %}
+				    <input onclick="F.connect(this.parentNode); return false;" type="image" src="{{ STATIC_URL }}django_facebook/images/facebook_login.png" />
+				</form>
+
+			</div>
+
+
 		</div>
 	</div>
 
