--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -18,6 +18,26 @@ $("#menu-toggle").click( function (e){
 
 
 <body>
+
+	<script>
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : 'your-app-id',
+	      xfbml      : true,
+	      version    : 'v2.7'
+	    });
+	  };
+
+	  (function(d, s, id){
+	     var js, fjs = d.getElementsByTagName(s)[0];
+	     if (d.getElementById(id)) {return;}
+	     js = d.createElement(s); js.id = id;
+	     js.src = "//connect.facebook.net/en_US/sdk.js";
+	     fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+	</script>
+
+
 	<!-- basic template for a navbar, anchor tags are important -->
 	<nav class = "navbar navbar-orange navbar-fixed-top clearfix"> 
 
