changed settings, included registration in INSTALLED_APPS

--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	{% for item in my_info %}
-	<h2> {{item}} </h2>
+	<h2> {{my_info[item]}} </h2>
 	{% endfor %}
 {% endblock %}
 
