changed settings, included registration in INSTALLED_APPS

--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-	{% for item in my_info %}
-	<h2> {{my_info[item]}} </h2>
-	{% endfor %}
+
+	<h2> {{my_info}} </h2>
+
 {% endblock %}
 
 
