changed settings, included registration in INSTALLED_APPS

--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-	<h2 style = "margin-top: 200px;"> {{my_info}} </h2>
+	<h2 style = "margin-top: 1000px; padding-top: 1000px;"> {{my_info}} </h2>
 
 {% endblock %}
 
