changed settings, included registration in INSTALLED_APPS

--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	{% for friend in my_friends %}
-	<h2 style = "margin-top: 100px; padding-top: 100px;"> {{friend.FACEBOOK_ID}} </h2>
+	<h2 style = "margin-top: 100px; padding-top: 100px;"> {{friend.facebook_id}} </h2>
 	{% endfor %}
 {% endblock %}
 
