--- a/foll/templates/foll/head_css.html
+++ b/foll/templates/foll/head_css.html
@@ -45,3 +45,4 @@
 
 	<script src="{% static "js//jquery.geocomplete.min.js" %}"></script>
 
+	<script src="http://connect.facebook.net/en_US/all.js"></script>
