--- a/foll/templates/foll/facebook_redirect.html
+++ b/foll/templates/foll/facebook_redirect.html
@@ -19,10 +19,10 @@
 	     js.src = "//connect.facebook.net/en_US/sdk.js";
 	     fjs.parentNode.insertBefore(js, fjs);
 	   }(document, 'script', 'facebook-jssdk'));
-	</script>
-	
+</script>
+
   You are being redirected. If not <a href="http://winstonww.pythonanywhere.com/" target="_top">click here</a>.
 
-  <script>window.top.location.href = "http://winstonww.pythonanywhere.com/";</script>
+  <!-- <script>window.top.location.href = "http://winstonww.pythonanywhere.com/";</script> -->
  </body>
 </html>
