--- a/foll/templates/foll/facebook_invite.html
+++ b/foll/templates/foll/facebook_invite.html
@@ -1,6 +1,6 @@
 <div id = "facebook_invite">
-	<script src="http://connect.facebook.net/en_US/all.js"></script>
-	<a href="#" onclick="FBInvite()">Invite Facebook Friends</a>
+	
+	Friend's not on the list? <a href="#" onclick="FBInvite()">Invite them to sign up on facebook!</a>
 	<script>
 
 
