--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -47,7 +47,7 @@ $("#menu-toggle").click( function (e){
 			<div class = "navbar-header " style = "padding-top: 1.2%; width : 4%;">
 				
 					<button id="menu-toggle"">
-						<i class="navbar-icon fa fa-bars"></i>
+						<i class="fa fa-bars"></i>
 					</button>
 					
 			</div>
