--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -46,9 +46,9 @@ $("#menu-toggle").click( function (e){
 			
 			<div class = "navbar-header " style = "padding-top: 1.2%; width : 4%;">
 				
-					<button id="menu-toggle"">
+					<div id="menu-toggle">
 						<i class="fa fa-bars"></i>
-					</button>
+					</div>
 					
 			</div>
 
