--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -138,3 +138,10 @@ ul.pagination li:first-child, ul.pagination li:last-child{display: none;}
 	position: relative;
 	height: 100%;
 }
+#menu-toggle:hover{
+	color: #FFD12A;
+}
+
+.fa-bars{
+	color: white;
+}
