--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -44,9 +44,9 @@ $("#menu-toggle").click( function (e){
 		<div class = "container-fluid">
 			<!-- logo -->
 			
-			<div class = "navbar-header ">
+			<div class = "navbar-header clearfix">
 				
-					<div id="menu-toggle" class = "menu-button">
+					<div id="menu-toggle" >
 						<i class="fa fa-bars"></i>
 					</div>
 					
