--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -138,6 +138,7 @@ ul.pagination li:first-child, ul.pagination li:last-child{display: none;}
 #menu-toggle{
 	position: relative;
 	height: 100%;
+	width: 100%;
 }
 #menu-toggle:hover{
 	background-color: #ffd12a;
