--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -39,40 +39,41 @@ $("#menu-toggle").click( function (e){
 
 
 	<!-- basic template for a navbar, anchor tags are important -->
-	<nav class = "navbar navbar-orange navbar-fixed-top clearfix"> 
+	<nav class = "navbar navbar-orange navbar-fixed-top"> 
 
-		<div class = "container-fluid">
+
+			<div id="menu-toggle" ">
+				<i class="fa fa-bars"></i>
+			</div>	
+
+
+
+			<div class = "navbar-inner">
 			<!-- logo -->
-			
-			<div class = "navbar-header clearfix">
+				<div class = "navbar-header">
+					<a href = '#' class = "navbar-brand"> FOLL </a>
+				</div>
+				<!-- Menu Item -->
+				<div class = "collapse navbar-collapse" id = "mainNavBar">
 				
-					<div id="menu-toggle" >
-						<i class="fa fa-bars"></i>
-					</div>
-					
+					<ul class = "nav navbar-nav">
+						<!-- active class gives the hover hightlight -->
+						<!-- Menu Not gonna work without the anchor tag -->
+						<li class = "active"><a href = "{% url 'index' %}"> Home </a> </li>
+						<li> <a href = "#"> About </a> </li>
+						<li> <a href = "#"> Help </a> </li>
+					</ul>
+					{% if request.user.is_authenticated %}
+					<ul class = "nav navbar-right logout_button">
+						<li><a href = {% url 'signout' %}> Logout </a></li>
+					</ul>
+					{% else %}
+						{% block login %} {% endblock %}
+					{% endif %}
+
+				</div>
 			</div>
 
-			
-			<!-- Menu Item -->
-			<div class = "collapse navbar-collapse" id = "mainNavBar">
-			<a href = '#' class = "navbar-brand"> FOLL </a>
-				<ul class = "nav navbar-nav">
-					<!-- active class gives the hover hightlight -->
-					<!-- Menu Not gonna work without the anchor tag -->
-					<li class = "active"><a href = "{% url 'index' %}"> Home </a> </li>
-					<li> <a href = "#"> About </a> </li>
-					<li> <a href = "#"> Help </a> </li>
-				</ul>
-				{% if request.user.is_authenticated %}
-				<ul class = "nav navbar-right logout_button">
-					<li><a href = {% url 'signout' %}> Logout </a></li>
-				</ul>
-				{% else %}
-					{% block login %} {% endblock %}
-				{% endif %}
-
-			</div>
-		</div>
 	</nav>
 
 <!-- 	<h2 id = "testing"> hihi </h2> -->
