--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -39,7 +39,7 @@ $("#menu-toggle").click( function (e){
 
 
 	<!-- basic template for a navbar, anchor tags are important -->
-	<nav class = "navbar navbar-orange navbar-fixed-top"> 
+	<nav class = "navbar navbar-orange navbar-fixed-top" id = "main-navbar"> 
 
 
 			<div id="menu-toggle" ">
