--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -42,9 +42,9 @@ $("#menu-toggle").click( function (e){
 	<nav class = "navbar navbar-orange navbar-fixed-top" id = "main-navbar"> 
 
 
-			<div id="menu-toggle" ">
+			<button id="menu-toggle" ">
 				<i class="fa fa-bars"></i>
-			</div>	
+			</button>
 
 
 
