--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -39,14 +39,12 @@ $("#menu-toggle").click( function (e){
 
 
 	<!-- basic template for a navbar, anchor tags are important -->
-	<nav class = "navbar navbar-orange navbar-fixed-top" id = "main-navbar"> 
+	<div class = "navbar navbar-orange navbar-fixed-top" id = "main-navbar"> 
 
 
 			<button id="menu-toggle" ">
 				<i class="fa fa-bars"></i>
 			</button>
-
-
 
 			<div class = "navbar-inner">
 			<!-- logo -->
@@ -73,8 +71,7 @@ $("#menu-toggle").click( function (e){
 
 				</div>
 			</div>
-
-	</nav>
+	</div>
 
 <!-- 	<h2 id = "testing"> hihi </h2> -->
 
